// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Animate should render correctly with minimum props 1`] = `
<div
  animationStates={Object {}}
  delaySeconds={0}
  durationSeconds={0.3}
  easeType="linear"
  endStyle={
    Object {
      "display": "block",
    }
  }
  reverseDelaySeconds={0}
  startAnimation={false}
  startStyle={Object {}}
  tag="div"
>
  test
</div>
`;

exports[`Animate should render correctly with minimum props 2`] = `
<div
  animationStates={Object {}}
  delaySeconds={0}
  durationSeconds={0.3}
  easeType="linear"
  endStyle={
    Object {
      "display": "block",
    }
  }
  reverseDelaySeconds={0}
  startAnimation={true}
  startStyle={Object {}}
  tag="div"
>
  test
</div>
`;

exports[`Animate should render correctly with render props 1`] = `
<div
  animationStates={Object {}}
  delaySeconds={0}
  durationSeconds={0.3}
  easeType="linear"
  endStyle={
    Object {
      "display": "block",
    }
  }
  render={[Function]}
  reverseDelaySeconds={0}
  startAnimation={false}
  startStyle={Object {}}
  tag="div"
>
  what
</div>
`;

exports[`Animate should render custome tag correctly 1`] = `
<li
  animationStates={Object {}}
  delaySeconds={0}
  durationSeconds={0.3}
  easeType="linear"
  endStyle={
    Object {
      "display": "block",
    }
  }
  reverseDelaySeconds={0}
  startAnimation={false}
  startStyle={Object {}}
  tag="li"
/>
`;
